# TFG

./: .gitignore  pyproject.toml
docs/: FL-proposal.md  REVIEW_CHECKLIST.md  minim_integration_review.md  proposal.md  roadmap.md  simplified-overview.md  technical-overview.md
models/base/: README.md
models/base/mock-minim/: README.md  model.json
src/: run_pipeline.py
src/cli/: __init__.py  evaluate.py  prepare.py  run.py
src/data/: __init__.py  config.py  image_utilities.py  medical_utilities.py  run_pipeline.py
src/data/acdc/: __init__.py  pipeline.py  preprocess.py
src/data/cli/: data_cli.py  data_config.py
src/data/datasets/: __init__.py  csv_generation.py  driver_contract.py  exploration.py  medical_utilities.py
src/data/export/: minim_csv.py  row_contract.py
src/data/prompts/: cardiac_prompt.py  driver_contract.py  prompt_contract.py
src/data/splits/: patient_id_split.py
src/data/utilities/: dataset_utilities.py  image_utilities.py  medical_utilities.py
src/datasets/acdc/: pipeline.py
src/minim/: __init__.py  checkpoints.py  cli.py  cli_args.py  constants.py  generate.py  metrics.py  orchestrator.py  pipeline.py  preparation.py  runs.py  train_model.py
src/orchestration/: run_pipeline.py
src/prompts/: cardiac_prompt.py
src/splits/: patient_id_split.py
src/synthetic/: csv_generation.py  synthetic_generation.py
src/tfg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/data/: conftest.py  test_image_utilities.py  test_medical_utilities.py
tests/synthetic/: test_csv_generation.py  test_synthetic_generation.py
(+12 files in other folders)
