[project]
name = "tfg"
version = "0.1.0"
dependencies = [
    "accelerate>=0.20.3",
    "datasets",
    "diffusers>=0.22.0",
    "huggingface-hub",
    "nibabel",
    "numpy",
    "pandas>=1.3.0",
    "Pillow>=8.0.0",
    "pytorch-msssim",
    "pyyaml>=6.0",
    "safetensors>=0.3.1",
    "scikit-image",
    "scipy>=1.7.0",
    "SimpleITK",
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "transformers>=4.25.1",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
    "pytest",
]

[project.scripts]
prepare = "tfg_cli.prepare:main"
evaluate = "tfg_cli.evaluate:main"
run = "tfg_cli.run:main"
